--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
 <resources>
     <!-- application start -->
     <string name="app_name" translatable="false">"WiFiAnalyzer"</string>
-    <string name="app_full_name" translatable="false">"WiFiAnalyzer (open-source)"</string>
+    <string name="app_full_name" translatable="false">"Houtan Project"</string>
     <string name="app_company_name" translatable="false">"VREM Software Development"</string>
     <string name="app_copyright">"Copyright \u00A9 2015 \u002D "</string>
     <string name="app_url" translatable="false">"https://vremsoftwaredevelopment.github.io/WiFiAnalyzer"</string>
@@ -32,9 +32,12 @@
     <string name="scanner_pause">"Pause"</string>
     <string name="scanner_play">"Play"</string>
 
+
     <!-- action start -->
     <string name="action_access_points">"Access Points"</string>
     <string name="action_channel_rating">"Channel Rating"</string>
+    <string name="set_destination">Set The Destination</string>
+    <string name="collect_data">Collect Data</string>
     <string name="action_channel_graph">"Channel Graph"</string>
     <string name="action_time_graph">"Time Graph"</string>
     <string name="action_export">"Export"</string>
